Fix category spacing

--- a/app/assets/stylesheets/custom/explore.scss
+++ b/app/assets/stylesheets/custom/explore.scss
@@ -19,7 +19,7 @@
 .first-explore{
   margin: 0 auto;
   column-count: 4;
-  column-gap: 20px;
+  column-gap: 12px;
   width:960px;
 
   li {
